# f1r3fly-rgb

./: .gitignore  .gitmodules  Cargo.toml  README.md  rgb_transfer_steps.md  start-regtest.sh  stop-regtest.sh
.github/workflows/: ci.yml  rgb-test.yml
ci/: standalone.yml
ci/conf/: logback.xml  standalone-dev.conf
ci/genesis/: standalone-bonds.txt  standalone-wallets.txt
docs/: bitlight-invoice-format.md  bitlight-rgb-wallet-analysis.md  rgb-runtime-research-findings.md  rgb-transfer-implementation-plan.md  rgb-transfer-user-flows.md  rgb-wallet-complete-implementation.md  rho20-contract-reference.md
docs/bugs/: f1r3fly-integration-challenges.md  invoice-expiration-enhancement.md  rgb-invoice-timeout-issue.md  rho20-security-vulnerabilities.md  treehashmap-missing-iteration-methods.md  witness-identifier-balance-tracking.md
docs/plans/: f1r3fly-rgb-alpha-plan.md  f1r3fly-rgb-wallet-implementation-plan.md  invoice-core-api-implementation-tasks.md  issue-1-deployer-signature-implementation.md  rholang-rspace-integration-plan.md  single-address-ux-implementation.md
docs/plans/complete/: bitcoin-layer-testing-plan.md  dual-mode-rgb-wallet-implementation.md  f1r3fly-rgb-high-level-abstractions.md  f1r3fly-rgb-wallet-integration.md  f1r3fly-wallet-asset-balance-test-plan.md  list-utxos-implementation.md  minimal-spawn-blocking-fix.md  phase-3-rgb-integration-plan.md  phase-4-manager-async-wrapper.md  remaining-integration-tests-plan.md  rgb-asset-issuance-plan.md  rho20-persistent-contract-testing.md  taproot-support-required.md
esplora-mock/: Cargo.toml  README.md
esplora-mock/src/: handlers.rs  lib.rs  main.rs  rpc_client.rs  server.rs  types.rs
scripts/: clean.sh  run-rgb-transfer-test.sh  start-regtest.sh  stop-regtest.sh  test.sh
src/: bitcoin_anchor.rs  consignment.rs  contract.rs  contract_library.rs  contracts.rs  error.rs  executor.rs  invoice.rs  lib.rs  opreturn.rs  signature_utils.rs  tapret.rs
src/templates/: rho20_contract.rho
tests/: bitcoin_anchor_test.rs  consignment_test.rs  contract_test.rs  contracts_test.rs  f1r3fly_executor_test.rs  invoice_test.rs  signature_utils.rs
wallet/: .env.example  .gitignore  Cargo.toml  README.md
wallet-frontend/: README.md  index.html  package-lock.json  package.json  spa-server.py  tailwind.config.js
wallet-frontend/src/: App.tsx
wallet-frontend/src/api/: client.ts  index.ts  types.ts  wallet.ts
wallet-frontend/src/components/: AcceptConsignmentModal.tsx  AddressList.tsx  BalanceDisplay.tsx  Button.tsx  CreateUtxoModal.tsx  DeleteWalletModal.tsx  DocsLayout.tsx  ExportGenesisModal.tsx  FireflyStatus.tsx  GenerateInvoiceModal.tsx  IssueAssetModal.tsx  Layout.tsx  SendBitcoinModal.tsx  SendTransferModal.tsx  UTXOList.tsx  UnlockUtxoModal.tsx  WalletCard.tsx
wallet-frontend/src/pages/: CreateWallet.tsx  Docs.tsx  DocsResources.tsx  DocsRgbIssuance.tsx  DocsUtxoCreation.tsx  Home.tsx  ImportWallet.tsx  WalletDetail.tsx
wallet-frontend/src/utils/: format.ts  theme.ts
wallet/examples/: derive_address.rs  generate_test_wallet.rs
wallet/rholang/: rgb20_asset.rho  rgb_state_storage.rho  test_simple.rho
wallet/src/: config.rs  error.rs  lib.rs  main.rs  manager.rs
wallet/src/api/: handlers.rs  mod.rs  server.rs  types.rs
wallet/src/bitcoin/: balance.rs  balance_checker.rs  mod.rs  network.rs  send.rs  transaction.rs  utxo.rs
wallet/src/firefly/: client.rs  helpers.rs  mod.rs  registry.rs  types.rs
wallet/src/rgb/: asset.rs  cache.rs  consignment.rs  lifecycle.rs  mod.rs  runtime.rs  transfer.rs
wallet/src/storage/: file_system.rs  keys.rs  mod.rs  models.rs
wallet/src/wallet/: address_manager.rs  address_ops.rs  addresses.rs  balance.rs  balance_ops.rs  bitcoin_ops.rs  lifecycle.rs  manager.rs  mod.rs  rgb.rs  rgb_consignment_ops.rs  rgb_ops_f1r3fly.rs  rgb_ops_traditional.rs  rgb_runtime.rs  rgb_transfer_ops.rs  signer.rs  storage.rs  sync.rs  sync_ops.rs  transaction.rs  wallet_ops.rs
wallet/src/wallet/shared/: addresses.rs  balance.rs  bitcoin_validator.rs  keys.rs  mod.rs  rgb.rs  rgb_lifecycle.rs  rgb_mode.rs  rgb_runtime.rs  signer.rs  storage.rs  transaction.rs
wallet/tests/: common.rs  f1r3fly_test_utils.rs  firefly_common.rs  mod.rs  rgb_sync_test.rs  rgb_transfer_balance_test.rs  signer_test.rs  test_firefly_integration.rs
wallet/tests/integration/: mod.rs  test_bitcoin_validator.rs  test_e2e_phase0.rs  test_error_handling.rs
wallet/tests/integration/f1r3fly/: mod.rs  test_allocations.rs  test_contract_metadata.rs  test_transitions.rs
