[package]
name = "f1r3fly-rgb"
version = "0.1.0"
edition = "2021"
authors = ["F1r3fly Contributors"]
description = "Smart contracts with F1r3fly execution and Bitcoin anchoring"
license = "Apache-2.0"

[dependencies]
# F1r3fly client
node_cli = { git = "https://github.com/F1R3FLY-io/rust-client", branch = "rgb" }
f1r3fly-models = "0.1.0"
prost = "0.13.5"

# RGB ecosystem
rgb-std = { version = "0.12.0-rc.3", features = ["serde"] }
rgb-invoice = { version = "0.12.0-rc.3", features = ["bitcoin", "uri"] }
hypersonic = "0.12.0"
bp-core = "0.12.0"
bp-std = { version = "0.12.0-rc.3", features = ["client-side-validation", "serde"] }
commit_verify = "0.12.0"
bitcoin = { version = "0.32", features = ["serde"] }

# Strict types (match RGB workspace versions)
strict_types = "2.9.0"
strict_encoding = "2.9.1"

# Utilities
amplify = "4.9.0"
blake2 = "0.10"
sha2 = "0.10"
log = "0.4"
hex = "0.4"
chrono = "0.4"
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Async
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15"
env_logger = "0.11"
anyhow = "1.0"  # For test error handling
tempfile = "3.8"  # For test persistence
