[package]
name = "esplora-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "esplora_mock"
path = "src/lib.rs"

[[bin]]
name = "esplora-mock"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Bitcoin Core RPC
bitcoincore-rpc = "0.18"

# Hex encoding/decoding
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenv = "0.15"
