[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin & BIP standards
bitcoin = { version = "0.32", features = ["rand-std"] }
bip39 = "2.0"

# RGB libraries
rgb = { package = "rgb-runtime", version = "0.12.0-rc.3", path = "../rgb" }
rgb-std = { version = "0.12.0-rc.3", path = "../rgb-std" }
rgb-persist-fs = { version = "0.12.0-rc.3", path = "../rgb-std/persistence/fs" }
bpstd = { package = "bp-std", version = "0.12.0-rc.3", path = "../bp-std" }
hypersonic = "0.12.0"
amplify = "4.9.0"
commit_verify = "0.12"
strict_encoding = "2.9.1"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (Esplora)
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
