[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin & BIP standards
bitcoin = { version = "0.32", features = ["rand-std"] }
bip39 = "2.0"

# RGB libraries
rgbp = { package = "rgb-runtime", version = "0.12.0-rc.3", path = "../rgb", features = ["fs", "resolver-esplora"] }
rgb = { package = "rgb-std", version = "0.12.0-rc.3", path = "../rgb-std" }
rgb-persist-fs = { version = "0.12.0-rc.3", path = "../rgb-std/persistence/fs" }
rgb_invoice = { package = "rgb-invoice", version = "0.12.0-rc.3", path = "../rgb-std/invoice", features = ["bitcoin", "uri"] }
sonic-callreq = "0.12.0"
bpstd = { package = "bp-std", version = "0.12.0-rc.3", path = "../bp-std" }
rgb_descriptors = { package = "rgb-descriptors", version = "0.12.0-rc.3", path = "../rgb/descriptors" }
hypersonic = "0.12.0"
amplify = "4.9.0"
commit_verify = "0.12"
strict_encoding = "2.9.1"
strict_types = "2.9.0"
toml = "0.8"

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (Esplora)
reqwest = { version = "0.11", features = ["json", "blocking"] }

# F1r3fly/Rholang integration
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
blake2 = "0.10.6"
typenum = "1.16.0"
prost = "0.13.5"
f1r3fly-models = "0.1.0"
hex = "0.4.3"

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
